# GLExt

./: CMakeLists.txt  README.md
include/glext/: gl.h
scripts/: glad_to_snake.lua
src/: gl.c
